--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
   </section>
 
   <section id="about" data-aos="fade-up">
-    <h2>🌍 About Me</h2>
-    <p>I'm Sosina, a web developer who loves turning ideas into apps. I recently finished a JavaScript course at Nucamp and I'm building tools to help people live better. Born in Ethiopia, I bring creativity, curiosity, and culture into every project.</p>
-  </section>
+    <h2>💡 About Me</h2>
+  <p>
+    I grew up watching my hardworking parents live with integrity, kindness, and purpose—and those values have shaped everything I do. I learned early that if something feels big or intimidating, that’s usually a sign I should try it. That mindset is what led me to software development.
+  </p>
+  <p>
+    I fell in love with IT in middle school and followed that path all the way through university. I started coding with C++ and Java, then kept learning—HTML, CSS, JS, SQL, PHP, Kotlin. While studying at Bahir Dar University, I built two apps I'm proud of: a custom Amharic word processor (yes, with its own .doc format) and a mobile app for COVID awareness. After transferring to Metro State, I dove deeper into full-stack development. My favorite projects there include a meal planning app and a bullet train management system(which was for my capstone graduation course).
+  </p>
+  <p>
+    What I love most about coding is that it’s a creative skill. You can build something from nothingand if you build the right thing, it can really help people. That’s why I’m here: to keep growing, keep building, and make things that matter.
+  </p>
+</section>
 
     <section id="skills" data-aos="fade-up">
     <h2>🛠 Skills</h2>
@@ -63,7 +71,10 @@
 <script>
   AOS.init();
 </script>
-
+<div id="img-modal" class="img-modal">
+  <span class="img-close">&times;</span>
+  <img class="img-modal-content" id="modal-img">
+</div>
 </body>
 </html>
 
